--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,6 +14,12 @@
   margin-top: 10%;
 }
 
+.btn.add-data-btn:hover
+{
+  background-color: #7b56ff;
+  color: white;
+}
+
 td {
   text-align: left;
 }
